Fixed mobile responsiveness and removed bottom spacing

--- a/style.css
+++ b/style.css
@@ -898,3 +898,161 @@ footer{
 section:last-child{
     margin-bottom: 0;
 }
+
+@media (max-width: 1024px){
+    section,
+    .products,
+    .about,
+    .review,
+    .login_form{
+        height: auto !important;
+        padding-bottom: 80px;
+    }
+}
+
+@media (max-width: 992px){
+
+    section .main .main_content{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    section .main .main_content .main_text h1{
+        font-size: 60px;
+        left: 0;
+        top: 20px;
+    }
+
+    section .main .main_content .main_text p{
+        width: 90%;
+        left: 0;
+        margin: 0 auto;
+        top: 40px;
+    }
+
+    section .main .main_content .main_image img{
+        width: 80%;
+        top: 40px;
+        left: 0;
+    }
+
+    section .main .social_icon{
+        display: none;
+    }
+
+    section .main .button{
+        position: relative;
+        left: 0;
+        margin: 60px auto 0;
+        display: inline-block;
+    }
+
+    .products .box{
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+    }
+
+    .about .about_main{
+        flex-direction: column;
+        text-align: center;
+        top: 0;
+        left: 0;
+        transform: none;
+    }
+
+    .about .about_main .about_text p{
+        width: 90%;
+        margin: auto;
+    }
+
+    .review .review_box{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .services .services_cards{
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .login_form{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .login_form .right{
+        position: static;
+        left: 0;
+        top: 0;
+        padding: 30px;
+    }
+
+    footer .footer_main{
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+    }
+}
+
+@media (max-width: 600px){
+
+    section nav{
+        flex-direction: column;
+        padding: 15px;
+    }
+
+    section nav ul{
+        margin-top: 10px;
+    }
+
+    section nav ul li{
+        display: block;
+        margin: 8px 0;
+    }
+
+    section .main .main_content .main_text h1{
+        font-size: 45px;
+        line-height: 45px;
+    }
+
+    section .main .main_content .main_text h1 span{
+        font-size: 35px;
+    }
+
+    .products .box{
+        grid-template-columns: 1fr;
+    }
+
+    .products .box .card{
+        width: 90%;
+    }
+
+    .about .about_main .image_contaner img{
+        height: auto;
+        width: 90%;
+    }
+
+    .review .review_box .review_card{
+        width: 90%;
+    }
+
+    .services{
+        width: 90%;
+    }
+
+    .login_form .left img{
+        width: 90%;
+    }
+
+    .login_form .right .user,
+    .login_form .right .password,
+    .login_form .right button{
+        width: 100%;
+    }
+
+    footer .footer_main{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
